feat: Added reset password API
